# Machine-Workers-Simulations

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
include/: maquinasmodificables.h  multiplesmaquinas1trabajador.h  ntec.h
resultados/: N_m:10tp:8N_w:10tc:6td:4.txt  N_m:10tp:8N_w:1tc:0.6td:0.4.txt  N_m:10tp:8N_w:2tc:1.2td:0.8.txt  N_m:10tp:8N_w:2tc:1.6td:0.8.txt  N_m:10tp:8N_w:4tc:2.4td:1.6.txt  N_m:10tp:8N_w:5tc:3td:2.txt  N_m:1tp:0.8N_w:1tc:0.6td:0.4.txt  N_m:5tp:4N_w:1tc:0.6td:0.4.txt  maquinasDET.txt  maquinasEXP.txt  ntec-s:1NTEC.txt  ntec-s:1TTP.txt  ntec-s:5NTEC.txt  ntec-s:5TTP.txt  ntec-s:NTEC.txt  ntec-s:TTP.txt
scripts/: run1Trabajador.sh  runNtec.sh
src/: ComputeBestModel.cpp  maquinasmodificable.cpp  multiplesmaquinas1trabajador.cpp  ntec.cpp
