PROJECT(CXX)
cmake_minimum_required(VERSION 3.16)
if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release)
endif()
set(CMAKE_CXX_FLAGS "-Wall -Wextra")
set(CMAKE_CXX_FLAGS_DEBUG "-g")
set(CMAKE_CXX_FLAGS_RELEASE "-O3")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
ADD_EXECUTABLE(maquinas1trabajador src/multiplesmaquinas1trabajador.cpp include/multiplesmaquinas1trabajador.h ../include/utils.cpp)
ADD_EXECUTABLE(maquinasmodificable src/maquinasmodificable.cpp include/multiplesmaquinas1trabajador.h ../include/utils.cpp)
ADD_EXECUTABLE(ntec src/ntec.cpp include/ntec.h ../include/utils.cpp)
ADD_EXECUTABLE(best_model src/ComputeBestModel.cpp ../include/utils.cpp)
